# VMosue

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.bat  package.bat  requirements.txt  vcpkg.json  需求.md
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md  build-notes.md
docs/acceptance/: test-protocol.md  v1.0-results.md
docs/superpowers/plans/: 2026-06-13-vmosue-v1.0.md  2026-06-16-gesture-overlay.md  2026-06-17-gesture-map-and-latency.md
docs/superpowers/specs/: 2026-06-13-vmosue-design.md  2026-06-16-gesture-overlay-design.md  2026-06-17-adaptive-parameters.md  2026-06-17-gesture-map-and-latency.md
docs/user/: README.md  gesture-action-map.md  gestures.md  quickstart.md  troubleshooting.md  tutorial.md
installer/: README.md
installer/nsi/: VMosue.nsi  variables.nsh
release/: .gitignore  RELEASE-NOTES.md
resources/i18n/: en.json  zh.json
resources/models/: README.txt
scripts/: bootstrap.ps1  hand_detector_server.py  prepare-resources.ps1  run-coverage.sh
src/: CMakeLists.txt
src/app/: App.cpp  App.h  CMakeLists.txt  Watchdog.cpp  Watchdog.h  main.cpp
src/capture/: CMakeLists.txt  CameraCapture.cpp  CameraCapture.h  Frame.h
src/config/: CMakeLists.txt  Calibration.cpp  Calibration.h  Config.cpp  Config.h
src/gesture/: ActionSet.h  AirClickDetector.cpp  AirClickDetector.h  CMakeLists.txt  ClickDetector.cpp  ClickDetector.h  CursorController.cpp  CursorController.h  DwellGate.cpp  DwellGate.h  GestureStateMachine.cpp  GestureStateMachine.h  HandOpen.h  PauseDetector.cpp  PauseDetector.h  ScrollDetector.cpp  ScrollDetector.h
src/inference/: CMakeLists.txt  HandDetector.cpp  HandDetector.h  HandStabilityFilter.h  LandmarkSmoother.h
src/input/: CMakeLists.txt  InputInjector.cpp  InputInjector.h
src/platform/: AutoStart.cpp  AutoStart.h  CMakeLists.txt  DisplayInfo.cpp  DisplayInfo.h  Hotkey.cpp  Hotkey.h
src/ui/: ActionListWindow.cpp  ActionListWindow.h  ActionReference.h  CMakeLists.txt  DebugWindow.cpp  DebugWindow.h  HandSkeleton.h  OverlayGeometry.h  OverlayWindow.cpp  OverlayWindow.h  SettingsWindow.cpp  SettingsWindow.h  TrayIcon.cpp  TrayIcon.h  TutorialWindow.cpp  TutorialWindow.h
src/util/: Adaptive.h  CMakeLists.txt  FrameConvert.cpp  FrameConvert.h  FrameResampler.h  I18n.cpp  I18n.h  Kalman1D.h  Logger.h  OneEuroFilter.h  ProfileGuard.h  Result.h
tests/: CMakeLists.txt
tests/fixtures/: README.md  sample_landmarks.json
tests/fixtures/actions/: cursor_move.json  double_click.json  emergency_stop.json  left_click.json  left_drag.json  middle_click.json  pause_toggle.json  right_click.json  scroll_horizontal.json  scroll_vertical.json
tests/integration/: test_action_map.cpp  test_phantom_e2e.cpp  test_pipeline_e2e.cpp
tests/python/: test_hand_detector_server.py
tests/unit/: CMakeLists.txt  test_action_reference.cpp  test_adaptive.cpp  test_air_click_detector.cpp  test_calibration.cpp  test_camera_capture.cpp  test_click_detector.cpp  test_config.cpp  test_cursor_controller.cpp  test_display_info.cpp  test_dwell_gate.cpp  test_frame_convert.cpp  test_frame_resampler.cpp  test_hand_detector_confidence_map.cpp  test_hand_skeleton.cpp  test_hand_stability_filter.cpp  test_input_injector.cpp  test_one_euro_filter.cpp  test_overlay_geometry.cpp  test_pause_detector.cpp  test_profile_guard.cpp  test_result.cpp  test_scroll_detector.cpp  test_state_machine.cpp  test_watchdog.cpp
